--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,5 @@
 body { 
-    background-image: url("water.gif");
+    background-image: url("water2.gif");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center; 
